# agentic-monorepo-ecommerce

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/scaffold-resource/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users_table.py  0002_create_products_table.py  0003_add_user_role.py  0004_add_vendor_role.py  0005_create_stores_table.py  0006_create_inventory.py
apps/api/src/agentic_ecommerce_api/: __init__.py  _exception_handler.py  _pagination.py  _rate_limit.py  main.py
apps/api/src/agentic_ecommerce_api/auth/: __init__.py  dependencies.py  jwt.py  password.py  schemas.py
apps/api/src/agentic_ecommerce_api/cli/: create_user.py
apps/api/src/agentic_ecommerce_api/db/: __init__.py  base.py  models.py  session.py
apps/api/src/agentic_ecommerce_api/inventory/: __init__.py  schemas.py  service.py
apps/api/src/agentic_ecommerce_api/products/: __init__.py  schemas.py  slug.py
apps/api/src/agentic_ecommerce_api/routers/: auth.py  health.py  inventory.py  products.py  storefront.py  stores.py
apps/api/src/agentic_ecommerce_api/storefront/: __init__.py  schemas.py
apps/api/src/agentic_ecommerce_api/stores/: __init__.py  schemas.py
apps/api/tests/: conftest.py  test_auth.py  test_docs.py  test_exception_handler.py  test_health.py  test_inventory.py  test_products.py  test_rate_limit.py  test_storefront.py  test_stores.py
scripts/: _smoke_step1.py
(+4 files in other folders)
